@@ -154,7 +154,7 @@ namespace CBinding
 		{
 			// Don't add duplicates
 			foreach (ICompletionData icd in completionData) {
-				if (icd.Text[0] == data.Text[0])
+				if (icd.DisplayText == data.DisplayText)
 					return;
 			}
 			
@@ -174,13 +174,12 @@ namespace CBinding
 		}
 	}
 	
-	public class CompletionData : ICompletionDataWithMarkup
+	public class CompletionData : ICompletionData
 	{
 		private string image;
 		private string text;
 		private string description;
 		private string completion_string;
-		private string description_pango;
 		
 		public CompletionData (LanguageItem item)
 		{
@@ -212,31 +211,26 @@ namespace CBinding
 			this.text = item.Name;
 			this.completion_string = item.Name;
 			this.description = string.Empty;
-			this.description_pango = string.Empty;
 		}
 		
-		public string Image {
+		public string Icon {
 			get { return image; }
 		}
 		
-		public string[] Text {
-			get { return new string[] { text }; }
+		public string DisplayText {
+			get { return text; }
 		}
 		
 		public string Description {
 			get { return description; }
 		}
 
-		public string CompletionString {
+		public string CompletionText {
 			get { return completion_string; }
 		}
 		
-		public string DescriptionPango {
-			get { return description_pango; }
-		}
-		
-		public bool Sink {
-			get { return false; }
+		public DisplayFlags DisplayFlags {
+			get { return DisplayFlags.None; }
 		}
 	}
 
