@@ -1,3 +1,7 @@
+2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Gui/DataProvider.cs: Track CompletionData API.
+
 2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Gui/DataProvider.cs: Track API.
